0.6.7

  fix fatal bug of not marking things (oops),
  add icon for recording with start/stop button
  add parameter for if you want to use CAPTUREBLT and blink your mouse

0.6.6

 audio icon rename, aesthetic, newer better ffmpeg [or was it the same?]

0.6.5

better audio sniffer, hopefully

0.6.4

better installer, "scaling" registry settings are said to work now.
; fix ffplay resize bug, cleanup some dshow code, add debug/benchmarking
0.6.3 5/8/12

bump virtual audio version

0.6.2 4/27/12

fix for i420 color output looking grey :P
add some more parameters for internal "scaling" if you want to have windows do that for you, before passing it off down the pipe.
rename some parameters
speedup! (well, if you don't have aero installed) max 100fps -> 250 fps
fix benchmarker to be slightly more realistic.

default is 16 bit capture now, in an attempt to make it more speedy. Tell me if you don't want/like this though!

0.6.1 4/26/12

add i420 output support for flash media live encoder. Yikes.
"synchronize" the output fps better, for VLC sake.  It still lets you specify an fps that your system
can't actually do, in the which case you'll get messages like:


avcodec warning: almost fed libavcodec with two frames with the same PTS (754903828860)
avcodec warning: almost fed libavcodec with two frames with the same PTS (754903862193)
stream_out_transcode debug: drift is too high, resetting master sync
stream_out_transcode debug: drift is too high, resetting master sync

see http://forum.videolan.org/viewtopic.php?f=4&t=99906


0.6.0 4/24/12

fix mouse if using hwnd, allow for hex input to command line script input utility (also has a window input utility).

Add *tons* more options in the registry, also make it so you can specify a small window if desired, ex: vlc's --dshow-size="100x100" [crops currently, subject to change!]

new registry options:

'disable_aero_for_vista_plus_if_1', 'track_new_x_y_coords_each_frame_if_1', 